allow-bind-keys-disable

--- a/templates/named.conf.j2
+++ b/templates/named.conf.j2
@@ -12,4 +12,6 @@ include "/etc/bind/named.conf.options";
 include "/etc/bind/named.conf.local.master";
 include "/etc/bind/named.conf.local.slave";
 include "/etc/bind/named.conf.local.forward";
-{% if not bind_config_disable_default_zones %}include "/etc/bind/named.conf.default-zones";{% endif %}
+{% if not bind_config_disable_default_zones %}include "/etc/bind/named.conf.default-zones";
+{% endif %}
+{% if not bind_config_disable_bind_keys %}include "/etc/bind/bind.keys";{% endif %}
